tests/NormalTests/paczka1/small_fuzzy/87750915.err
Error in line 3: MEvL S870 82,25
Error in line 1: MEvL S200 28,7
